# groww-trader

./: .env.example  .gitignore  LICENSE  README.md  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  tailwind.config.js
.github/workflows/: ci.yml
app/: globals.css  layout.tsx  page.tsx
app/account/: page.tsx
app/admin/: layout.tsx  page.tsx
app/live-desk/: page.tsx
app/open-desk/: page.tsx
components/: AccountAiRisk.tsx  AccountAutoRefresh.tsx  AccountTables.tsx  AdminDataPanel.tsx  AdminStatusStrip.tsx  AdminSystemPanel.tsx  AdminUiEditor.tsx  AiAnalyst.tsx  AiCommentaryStream.tsx  AiSettingsDrawer.tsx  AiStatusPill.tsx  AnalysisPanels.tsx  ApiUsage.tsx  BreadthPanel.tsx  CatalystTimeline.tsx  DataSourceBadge.tsx  DecisionCard.tsx  EventFeed.tsx  FactorRadar.tsx  FundamentalsPanel.tsx  GlobalCuesStrip.tsx  Header.tsx  IntradayPanel.tsx  LiveDeskRoster.tsx  MarkdownView.tsx  MarketDepthLadder.tsx  Metrics.tsx  ModePills.tsx  NarrowComparisonGrid.tsx  OpenDeskShortlistTable.tsx  OptionChainPanel.tsx  PaperTradeLedger.tsx  PicksTray.tsx  QuantLab.tsx  RegimeStrip.tsx  RequestBudgetTile.tsx  ResistanceLooker.tsx  RiskMeterPill.tsx  ScanProgress.tsx  ScannerTable.tsx  (+12 more)
hooks/: useAdminStream.ts  useAiHeartbeat.ts  useDecisionState.ts  useLivePrice.ts  useLiveStream.ts
lib/: admin.ts  ai-context.ts  ai-tools.ts  ai.test.ts  ai.ts  api.ts  factor-stream.ts  types.ts
public/: popout.html
tests/: test_account.py  test_indicators.py  test_market_data.py  test_pro_analytics.py  test_session_and_ai_gate.py  test_strategies.py
(+67 files in other folders)
